# zatca-mcp

./: .gitignore  CONTRIBUTING.md  DIRECTORY_SUBMISSIONS.md  LICENSE  README.md  SYSTEM_DESIGN.html  glama.json  pyproject.toml
.github/workflows/: test.yml
examples/: fikrah_agent.py
src/zatca_mcp/: __init__.py  cli.py  server.py
src/zatca_mcp/api/: __init__.py  client.py  models.py
src/zatca_mcp/utils/: signing.py  tlv.py  validation.py  xml_builder.py
tests/: test_api_client.py  test_credit_debit.py  test_invoice.py  test_resources_prompts.py  test_signing.py  test_tlv.py  test_validation.py
