[project]
name = "zatca-mcp"
version = "0.1.0"
description = "ZATCA e-invoicing MCP server for Saudi Arabia — let AI agents generate compliant invoices"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Fikrah Team", email = "hadi.hijazi@bloqmedia.net"},
]
keywords = ["zatca", "e-invoicing", "mcp", "saudi-arabia", "ubl", "vat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "lxml>=4.9.0",
    "rich>=13.0",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
phase2 = [
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "anthropic>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "lxml-stubs",
]

[project.scripts]
zatca-mcp = "zatca_mcp.server:main"
fikra = "zatca_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/DoubleH10/zatca-mcp"
Repository = "https://github.com/DoubleH10/zatca-mcp"
Issues = "https://github.com/DoubleH10/zatca-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zatca_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "sandbox: marks tests that hit the live ZATCA sandbox (deselect with '-m \"not sandbox\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
